--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 :root {
     /* colors */
-    --bg-color: rgba(69,168,95,0.75);
+    --bg-color: rgba(69,168,95,0.90);
+    --bg-secondary-color: rgb(255, 255, 255);
     --primary-font-color: #fff;
     --secondary-font-color: #000;
+    --section-title-color: rgba(69,168,95,0.85);
 
     /* fonts */
     --logo-font: 'Fredoka One', cursive;
@@ -18,6 +20,12 @@
 body {
     margin: 0;
     font-family: var(--primary-font);
+    background-color: var(--bg-secondary-color);
+    color: var(--secondary-font-color);
+}
+
+h2 {
+    color: var(--section-title-color);
 }
 
 /* nav menu */
@@ -28,6 +36,7 @@ header {
     position: fixed;
     width: 100%;
     z-index: 10;
+    top: 0;
 }
 
 header .logo {
@@ -158,4 +167,42 @@ nav a:hover {
 .nav-toggle:checked ~ .nav-toggle-label-close-neg45 span {
     transform: rotate(-45deg);
     transition: transform 250ms ease-in-out 280ms;
+}
+
+/* Home Page */
+
+#home {
+    height: calc(100vh - 80px);
+    margin-top: 80px;
+}
+
+#home figure {
+    margin: 0;
+}
+
+#home .home-banner {
+    width: 100%;
+    height: auto;
+}
+
+#home article {
+    border-left: 5px solid var(--bg-color);
+    margin-left: 15px;
+    margin-top: 50px;
+    padding: 0 25px;
+}
+
+#home .learn-more-container {
+    width: 100%;
+    display: flex;
+    margin-top: 6.5em;
+}
+
+#home .learn-more-button {
+    text-decoration: none;
+    margin: auto;
+    border: 2px solid var(--section-title-color);
+    color: var(--section-title-color);
+    padding: 1em 6.5em;
+    border-radius: 10px;
 }
