--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,8 @@ nav a:hover {
 
 /* sections */
 main section {
-    height: calc(100vh - 81.75px);
+    padding-top: 61.875px;
+    height: calc(100vh - 81.875px);
 }
 
 main section article {
