--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,18 @@
     box-sizing: border-box;
 }
 
+/* hide arrows in number field */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance:textfield;
+}
+
 body {
     margin: 0;
     font-family: var(--primary-font);
