--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,8 @@ nav a:hover {
 /* Home Page */
 
 #home {
-    height: calc(100vh - 80px);
+    /* height: calc(100vh - 80px); */
+    min-height: 100vh;
     margin-top: 80px;
 }
 
