--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     --primary-font-color: #fff;
     --secondary-font-color: #000;
     --section-title-color: rgba(69,168,95,0.85);
+    --back-to-top-color: #ff2b44;
 
     /* fonts */
     --logo-font: 'Fredoka One', cursive;
@@ -259,4 +260,24 @@ main section .article-heading {
 
 #referenties {
     height: auto;
+}
+
+/* back to top button */
+
+.back-to-top {
+    position: fixed;
+    bottom: 0;
+    right: 0.5em;
+    z-index: 99;
+}
+
+.back-to-top a {
+    text-decoration: none;
+    color: #fff;
+    background-color: #ff2b44;
+    padding: 10px 20px;
+    text-align: center;
+    border-radius: 20px 20px 0px 0px;
+    font-weight: bold;
+    cursor: pointer;
 }
