--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,6 @@ header .logo {
     font-family: var(--logo-font);
     color: #fff;
     margin: 0;
-    /* margin-left: 5px; */
-    text-align: center;
     padding-top: 16px;
 }
 
@@ -282,7 +280,7 @@ main section .article-heading {
 .back-to-top a {
     text-decoration: none;
     color: #fff;
-    background-color: #ff2b44;
+    background-color: var(--back-to-top-color);
     padding: 10px 20px;
     text-align: center;
     border-radius: 20px 20px 0px 0px;
