--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,11 @@ header .logo {
 }
 
 nav {
-    /* position: absolute; */
     text-align: left;
+    position: fixed;
+    top: 0;
     left: 0;
+    padding-top: 60px;
     background: var(--bg-color);
     width: 100%;
     transform: scale(1,0);
