--- a/css/style.css
+++ b/css/style.css
@@ -416,16 +416,12 @@ main section .article-heading {
 /* Referenties */
 
 #referenties .ref-img img {
-    width: 90%;
+    width: 65%;
     height: auto;
 }
 
-#referenties .ref-img img {
-    padding: 50px 0;
-}
-
-#referenties {
-    height: auto;
+#referenties figure {
+    text-align: center;
 }
 
 /* Contact */
