Fixed typos in Palmares section
- fixed hoogste spelling
- changed onze to mijn
- (unrelated) fixed under construction section content position

--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ footer {
     }
     
     .under-construction h1 {
-        padding-top: 50%;
+        padding-top: 300px;
     }
 
     .under-construction a {
