--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,8 @@ main section .article-heading {
     border-radius: 15px;
     box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.29);
     border: 1px solid rgb(148, 148, 148);
-    display: none;
+    transform: scale(0);
+    transition: transform 250ms ease-in-out;
 }
 
 #clinics .close-btp-popup {
