--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,7 @@ footer {
 }
 
 .cookies-accept-button {
-    background-color: goldenrod;
+    background-color: rgb(211, 155, 12);
     padding: 5px;
     border: none;
 }
