--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,13 @@ footer {
     background-color: rgb(6, 49, 25);
     color: var(--primary-font-color);
     padding: 1.5em;
+    padding-bottom: 0;
     text-align: center;
+}
+
+footer .other-links a{
+    color: #fff;
+    font-size: 0.75em;
 }
 
 /* Cookies Banner */
