--- a/css/style.css
+++ b/css/style.css
@@ -277,28 +277,30 @@ main section .article-heading {
 
 #clinics .package-card {
     color: var(--primary-font-color);
-    text-align: center;
-    margin: 10px 40px;
-    padding: 40px 0;
-    padding-bottom: 10px;
-    min-height: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 0;
+    margin: 15px;
+    border-radius: 5px;
 }
 
 #clinics .package-card ul {
     list-style: none;
-    text-align: left;
-    padding-left: 70px;
-    padding-bottom: 35px;
 }
 
-#clinics .package-card ul li:not(.package-addition) {
-    margin: 5px 10px;
-    padding-left: 10%;
+#clinics .package-features {
+    padding: 0;
 }
 
 #clinics .package-heading {
     border-top: 2px solid #fff;
     border-bottom: 2px solid #fff;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 10px;
 }
 
@@ -307,9 +309,11 @@ main section .article-heading {
     color: #000;
     width: 130px;
     height: 130px;
-    margin: auto;
     border-radius: 100px;
-    padding: 32px 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #clinics .package-card .package-price {
@@ -318,16 +322,12 @@ main section .article-heading {
 
 #clinics .package-card .package-extra-info {
     font-size: .75em;
-    margin-top: 20px;
 }
 
 #clinics .package-card .package-1-addition {
     color: #fff;
     font-size: 1.25em;
     background-color: var(--package-1-card-color);
-    padding: 10px 0;
-    margin-left: -70px;
-    text-align: center;
 }
 
 #clinics .package-1 {
@@ -363,15 +363,11 @@ main section .article-heading {
 }
 
 .package-n p {
-    padding: 0 10%;
-    padding-bottom: 10px;
     text-align: justify;
 }
 
 #clinics .beat-the-pro {
     font-size: 1.4em;
-    margin-top: 10px;
-    margin-left: -20px;
     font-weight: bold;
     color: silver;
     text-shadow: 0 0 10px #FFF, 0 0 30px #49FF18, 5px 6px 1px rgba(212, 175, 55, 0);
