--- a/css/style.css
+++ b/css/style.css
@@ -415,21 +415,30 @@ main section .article-heading {
     text-align: justify;
 }
 
-#clinics .btp-popup {
+#clinics .btp-popup-container {
     position: fixed;
-    background: #fff;
-    top: 20%;
-    margin: auto;
-    right: 15%;
-    left: 15%;
-    text-align: center;
-    padding: 30px;
-    padding-top: 15px;
-    border-radius: 15px;
-    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.29);
-    border: 1px solid rgb(148, 148, 148);
+    top: 0;
+    height: 100vh;
+    background: rgba(0,0,0,0);
     transform: scale(0);
     transition: transform 150ms ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
+
+#clinics .btp-popup {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    margin: 5%;
+    border-radius: 5px;
+    border: 2px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
 }
 
 #clinics .btp-tooltip:active {
@@ -450,6 +459,7 @@ main section .article-heading {
 
 #clinics .popup-btp-text {
     color: var(--bg-color);
+    text-align: justify;
 }
 
 #clinics .euro-symbol {
