--- a/css/style.css
+++ b/css/style.css
@@ -548,7 +548,7 @@ main section .article-heading {
     border-radius: 0.5em;
 }
 
-#contact input {
+#contact input:not([type='checkbox']) {
     height: 2em;
     font-size: 1.5em;
     margin: 5px auto;
