show and hide select option drop down when select package

--- a/css/style.css
+++ b/css/style.css
@@ -557,6 +557,7 @@ main section .article-heading {
 }
 
 #contact form .select-option {
+    visibility: hidden;
     padding-bottom: 10px;
     display: flex;
     justify-content: space-between;
